[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mozilaz"
version = "1.0.0"
description = "MozilLaz — Lazca (Lazuri) Text-to-Speech model based on VoxCPM2 + LoRA"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "MozilLaz Contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "torchaudio>=2.0",
    "safetensors>=0.3",
    "soundfile>=0.11",
    "numpy>=1.24",
    "voxcpm>=2.0",
]

[project.optional-dependencies]
demo = ["gradio>=4.0"]
dev = ["pytest", "ruff"]

[project.urls]
Homepage = "https://huggingface.co/Anadilorg/MozilLaz"
Repository = "https://huggingface.co/Anadilorg/MozilLaz"
"Bug Tracker" = "https://huggingface.co/Anadilorg/MozilLaz/discussions"

[tool.setuptools.packages.find]
include = ["mozilaz*"]
exclude = ["*.tests", "*.tests.*"]
